added sample labelling by intersection proximity; major refactoring

--- a/notebooks/test.carla.ipynb
+++ b/notebooks/test.carla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,28 +21,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Town03'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = carla.Client(HOST, PORT)\n",
     "\n",
     "\"\"\"Get the current world.\"\"\"\n",
     "carla_world = client.get_world()\n",
-    "carla_map = carla_world.get_map()"
+    "carla_map = carla_world.get_map()\n",
+    "carla_map.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Signal_3Light_Post01', 'Stencil_STOP', 'Speed_60', 'Speed_30', 'Speed_90'}\n",
-      "{'274', '206', '1000001'}\n"
+      "{'Speed_90', 'Stencil_STOP', 'Speed_30', 'Speed_60', 'Signal_3Light_Post01'}\n",
+      "{'1000001', '206', '274'}\n"
      ]
     }
    ],
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +105,7 @@
      "text": [
       "38 traffic lights in map\n",
       "31 unique junctions in map\n",
-      "9 uncontrolled junctions\n"
+      "20 uncontrolled junctions\n"
      ]
     }
    ],
@@ -121,8 +133,7 @@
     "    tlight_distances[:,idx] = np.linalg.norm(tlight_locations - junction_locations[idx], axis=1)\n",
     "\n",
     "is_uncontrolled_junction = np.logical_not((tlight_distances < 25).any(axis=0))\n",
-    "len(util.compress_to_list(junctions, is_uncontrolled_junction))\n",
-    "uncontrolled_junctions = util.compress_to_list(junctions, uncontrolled_junction)\n",
+    "uncontrolled_junctions = util.compress_to_list(junctions, is_uncontrolled_junction)\n",
     "print(len(uncontrolled_junctions), \"uncontrolled junctions\")"
    ]
   },
