--- a/notebooks/test.carla.ipynb
+++ b/notebooks/test.carla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,27 +10,27 @@
     "import random\n",
     "import time\n",
     "import networkx as nx\n",
-    "from functools import reduce\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import generate.util as util\n",
+    "import utility as util\n",
+    "import carlautil\n",
     "HOST = '127.0.0.1'\n",
     "PORT = 2000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Town03'"
+       "'Town10HD'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,16 +45,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Landmarks include traffic lights, stop signs, and speed limit signs.\n",
+    "There is no way I know of to find the speed limit besides obtaining these signs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Speed_90', 'Stencil_STOP', 'Speed_30', 'Speed_60', 'Signal_3Light_Post01'}\n",
-      "{'1000001', '206', '274'}\n"
+      "landmark names:  Stencil_STOP Signal_3Light_Post01 Sign_Yield Sign_Stop\n",
+      "landmark type IDs: 206 205 1000001\n"
      ]
     }
    ],
@@ -68,8 +76,11 @@
     "for lm in carla_map.get_all_landmarks():\n",
     "    landmark_names.add(lm.name)\n",
     "    landmark_types.add(lm.type)\n",
-    "print(landmark_names)\n",
-    "print(landmark_types)"
+    "    if 'Speed_' in lm.name:\n",
+    "        carlautil.debug_point(client, lm.transform, t=15.0)\n",
+    "    \n",
+    "print(\"landmark names:\", *landmark_names)\n",
+    "print(\"landmark type IDs:\", *landmark_types)"
    ]
   },
   {
